# cpp-ctc-aligner

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
scripts/: build_windows.ps1  compare_srt_timestamps.py  export_onnx.py  quantize_model.py
src/: audio_decode.cpp  audio_decode.h  cli_args.cpp  cli_args.h  emissions.cpp  emissions.h  forced_align.cpp  forced_align.h  hangul_romaji.cpp  hangul_romaji.h  json_io.cpp  json_io.h  kana_romaji.cpp  kana_romaji.h  kanji_pinyin.cpp  kanji_pinyin.h  logger.h  main.cpp  model_config.cpp  model_config.h  postprocess.cpp  postprocess.h  span_align.cpp  span_align.h  spans.h  srt_io.cpp  srt_io.h  stacktrace.cpp  text_preprocess.cpp  text_preprocess.h  utf8_utils.h  version.h.in  vocab.cpp  vocab.h  vocab_json.cpp  vocab_json.h
test/samples/: japanese_test.srt
